RESOLVED FIXED137796
Crash under RemoteLayerTreeHost::getLayer() when closing a tab
https://bugs.webkit.org/show_bug.cgi?id=137796
Summary Crash under RemoteLayerTreeHost::getLayer() when closing a tab
Simon Fraser (smfr)
Reported 2014-10-16 16:11:12 PDT
Crash under RemoteLayerTreeHost::getLayer() when closing a tab
Attachments
Patch (3.44 KB, patch)
2014-10-16 16:29 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2014-10-16 16:29:55 PDT
Simon Fraser (smfr)
Comment 2 2014-10-16 16:30:35 PDT
Simon Fraser (smfr)
Comment 3 2014-10-16 16:39:31 PDT
Note You need to log in before you can comment on or make changes to this bug.